Basic todo api in mongoDB with all the routes.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "boom": "^4.0.0",
     "hapi": "^15.0.2",
     "joi": "^9.0.4",
+    "mongodb": "^2.2.9",
     "mongojs": "^2.4.0",
+    "mongoose": "^4.5.10",
     "node-uuid": "^1.4.7"
   }
 }
